--- a/BaiTap6/index.html
+++ b/BaiTap6/index.html
@@ -28,7 +28,7 @@
 
                 <div class="title1" style="padding-left: 80px;">
                     <a href="#">
-                        <span>ONLAB</span>
+                        <span>ONLAB 1</span>
                     </a>
                 </div>
 
